syntax = "proto3";
package littlehorse;

option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto";

import "google/protobuf/empty.proto";
import "cluster_health.proto";
import "interactive_query.proto";


service LHInternals {
    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {}

    rpc InternalScan(InternalScanPb) returns (InternalScanResponse) {}

    rpc WaitForCommand(WaitForCommandRequest) returns (WaitForCommandResponse) {}

    rpc GetAdvertisedHosts(google.protobuf.Empty) returns (InternalGetAdvertisedHostsResponse) {}

    rpc TopologyInstancesState(google.protobuf.Empty) returns (TopologyInstanceStateResponse) {}

    rpc LocalTasks(google.protobuf.Empty) returns (LocalTasksResponse) {}
}
